修复高版本jdk没有BASE64Encoder类的问题